Delegation card vertical align fix

--- a/src/sharedComponents/TransactionsTable/transactionsTable.scss
+++ b/src/sharedComponents/TransactionsTable/transactionsTable.scss
@@ -27,7 +27,7 @@
 
       &.out {
         color: $warning;
-        border: 1px solid lighten($warning, 30%);
+        border: 1px solid lighten($warning, 35%);
       }
 
       &.in {
